--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "express-session": "^1.17.2",
     "express-session-sequelize": "^2.3.0",
     "mysql2": "^2.3.2",
-    "sequelize": "^6.8.0"
+    "sequelize": "^6.8.0",
+    "socket.io": "^4.3.1"
   },
   "keywords": []
 }
