--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-handlebars": "^5.3.4",
     "express-session": "^1.17.2",
     "express-session-sequelize": "^2.3.0",
+    "express-sessions": "^1.0.6",
     "mysql2": "^2.3.2",
     "sequelize": "^6.8.0",
     "socket.io": "^4.3.1"
